Changes from Ant 1.7.0RC1 to current SVN version
==================================================

Changes that could break older environments:
-------------------------------------------

Fixed bugs:
-----------

* docletpath attribute of javadoc ignored.
  Bugzilla 40900.

* Incorrect recursion in DOMUtil.listChildNodes()
  Bugzilla 40918.
  
* compareTo method in CompressedResource does not 
  take comparison with another CompressedResource into account.
  Bugzilla 40949.

* possible NPE in Jar.java.
  Bugzilla 40847.

* regression in attribute prefix (+ others) for refid in zipfileset and tarfileset.
  Bugzilla 41004, 30498.

* dependset failed if the basedir of a target fileset did not exist.
  Bugzilla 40916.

Other changes:
--------------

* Warn user when a reference in the form "${refid}" cannot be resolved as this
  is a sign they probably meant "refid" (misuse of property expansion syntax).

* add dtd to javadoc for junit.
  Bugzilla 40754.

* add quiet attribute to loadfile/resource.
  Bugzilla 38249.

* make Locator#fromURI also append the drive letter when running under Windows 
  with JDK 1.3 or 1.2

* do not uppercase the drive letters systematically in FileUtils#normalize

Changes from Ant 1.7.0Beta3 to Ant 1.7.0RC1
===========================================

Changes that could break older environments:
-------------------------------------------

Fixed bugs:
-----------

* OOM caused by IH holding on to classes and thus their classloaders.
  Bugzilla 28283 and 33061.

* <delete> doesnt delete when defaultexcludes="false" and no includes is set 
  fixed. Bugzilla 40313.

* behavior change of DirectoryScanner/AbstractFileset when conditional include
  patterns are used. Bugzilla 40722.

* <javac> fails with NPE when compiling with eclipse ecj 3.1.x.
  Bugzilla 40839.

* JUnitTestRunner had a NPE when unable to create parser, the exception
  containing the error did not get reported. Bugzilla 36733.
  
Other changes:
--------------
