@@ -1,0 +1,69 @@
+<?xml version="1.0"?>
+
+<project name="delete-test" basedir="." default="all"
+       xmlns:au="antlib:org.apache.ant.antunit">
+  <property name="working.dir" value="working"/>
+  <property name="existing.dir" value="working/exists"/>
+  <property name="nonexistent.dir" value="working/nonexists"/>
+	
+  <target name="all">
+    <au:antunit>
+      <fileset file="${ant.file}"/>
+      <au:plainlistener/>
+    </au:antunit>
+  </target>
+
+
+  <target name="init">
+    <delete dir="${working.dir}"/>
+    <mkdir dir="${working.dir}"/>
+    <mkdir dir="${existing.dir}"/>
+  </target>
+
+  <target name="tearDown">
+    <delete dir="${working.dir}"/>
+  </target>
+
+  <!--test that you can delete a fileset with a nonexistent dir without failure-->
+  <target name="testdelfileset" depends="init">
+    <delete quiet="true" includeEmptyDirs="true">
+       <fileset dir="${nonexistent.dir}"/>
+    </delete>
+
+  	<au:assertFileExists file="${existing.dir}" />
+  		
+    <delete quiet="true" includeEmptyDirs="true">
+       <fileset dir="${existing.dir}"/>
+    </delete>
+
+  	<au:assertFileDoesntExist file="${existing.dir}" />
+
+  	
+    <mkdir dir="${existing.dir}"/>
+
+    <delete quiet="true" includeEmptyDirs="true">
+       <fileset dir="${nonexistent.dir}"/>
+       <fileset dir="${existing.dir}"/>
+    </delete>
+
+
+  	<au:assertFileDoesntExist file="${existing.dir}" />
+  	<!--
+    <available file="dir_exists" type="dir" property="delete.dir.failed"/>
+    <fail message="Failed to delete directory (2)" if="delete.dir.failed"/>
+-->
+  	
+  	
+    <mkdir dir="${existing.dir}"/>
+
+    <delete quiet="true" includeEmptyDirs="true">
+       <fileset dir="${existing.dir}"/>
+       <fileset dir="${nonexistent.dir}"/>
+    </delete>
+
+
+  	<au:assertFileDoesntExist file="${existing.dir}" />
+
+  </target>
+
+</project>
